--- a/assets/scss/smog-item.scss
+++ b/assets/scss/smog-item.scss
@@ -1,22 +1,61 @@
+.smog-element{
 
-.col-1 {
-  display: inline-block;
-  width: 40%;
+  .col-1 {
+    all: revert;
+    display: inline-block;
+    width: 40%;
+    color: rgb(231, 231, 231);
+    position: relative;
+    //top: -70px;
+    //left: 120px;
+    vertical-align: middle;
+    text-align: center;
+    .col-1 h3 {
+      //margin: 0 0 10% 0;
+      padding: 0;
+      font-size: 80px;
+      color: rgb(231, 231, 231);
+    }
+
+
+  }
+
+
+
+  .col-2 {
+    all: revert;
+    display: inline-block;
+    width: 50%;
+    vertical-align: middle;
+    text-align: right;
+    color: rgb(231, 231, 231);
+  }
+
+  .info {
+    color: rgb(231, 231, 231);
+    font-size: 22px;
+  }
+
+  .close{
+    position: relative;
+    top: -40px;
+    right: -90px;
+    //all: revert;
+    //display: flow;
+    //top: 5px;
+    //right: 10px;
+    font-size: 14px;
+    color: rgb(231, 231, 231);
+  }
+  .close:hover {
+    color: black;
+    font-weight: bold;
+    cursor: pointer;
+  }
+
+
 }
 
-.col-1 h3 {
-  margin: 0 0 10px 0;
-  padding: 0;
-  font-size: 22px;
-}
 
-.col-2 {
-  display: inline-block;
-  width: 50%;
-  vertical-align: top;
-  text-align: right;
-}
 
-.info {
-  font-size: 22px;
-}
+
